[gd_scene load_steps=4 format=3 uid="uid://cbr8dj4m1b3wo"]

[ext_resource type="Script" path="res://Objects/UI/DeathScreen.gd" id="1_d26xg"]
[ext_resource type="FontFile" uid="uid://d3k8gfnnoivc5" path="res://Art/Fonts/AtkinsonHyperlegible-Bold.ttf" id="2_0px5a"]
[ext_resource type="FontFile" uid="uid://dfoo6jdp7qlm3" path="res://Art/Fonts/AtkinsonHyperlegible-Regular.ttf" id="3_7wmbv"]

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d26xg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 23

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0px5a")
theme_override_font_sizes/font_size = 80
text = "YOU DIED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7wmbv")
theme_override_font_sizes/font_size = 60
text = "Score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reset Container" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/Reset Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Reset" type="Button" parent="Panel/MarginContainer/VBoxContainer/Reset Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_7wmbv")
theme_override_font_sizes/font_size = 50
text = "Restart"

[node name="TextureRect2" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/Reset Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Exit Game Container" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/Exit Game Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Exit Game" type="Button" parent="Panel/MarginContainer/VBoxContainer/Exit Game Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_7wmbv")
theme_override_font_sizes/font_size = 50
text = "Exit Game"

[node name="TextureRect2" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/Exit Game Container"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer/Reset Container/Reset" to="." method="_on_reset_button_down"]
[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer/Exit Game Container/Exit Game" to="." method="_on_exit_game_button_down"]
